update user name and password

--- a/config.json
+++ b/config.json
@@ -6,8 +6,8 @@
     "fb_url": "https://www.facebook.com/rishab.gupta.10420/",
     "tw_url": "https://twitter.com/bluerakun001",
     "git_url": "https://github.com/optirg-39",
-    "gmail-username": "elurngonline@gmail.com",
-    "gmail-password": "letsshop",
+    "gmail-username": "example@gmail.com",
+    "gmail-password": "password",
     "blog_name": "w3coders",
     "tag_line":"Coding for all",
     "about_text": "Hi i am rishabh i am a web developer and i am learning flask in Python",
